--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.18.1",
     "@astrojs/preact": "^2.1.0",
     "astro": "^2.1.3",
     "preact": "^10.13.1"
