--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@astrojs/preact": "^2.1.0",
     "astro": "^2.1.3",
     "preact": "^10.13.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
