--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/mdx": "^0.18.1",
     "@astrojs/preact": "^2.1.0",
-    "astro": "^2.1.3",
-    "preact": "^10.13.1"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.3.0",
+    "preact": "^10.13.1",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
