--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ahmetahaydemir.dev",
   "type": "module",
-  "version": "0.5.2",
+  "version": "0.6.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,7 +13,8 @@
     "@astrojs/mdx": "^0.18.1",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
