--- a/public/data/GameConfigDataJsonFile.json
+++ b/public/data/GameConfigDataJsonFile.json
@@ -1,11 +1,19 @@
 {
     "configDataJson": {
         "settingsConfiguration": {
-            "initialMusicVolume": 0.5,
-            "initialSFXVolume": 0.5
+            "musicVolume": 0.3,
+            "sfxVolume": 0.4,
+            "resolution": "1920x1080",
+            "framerate": "120",
+            "display": "windowed",
+            "vsync": false,
+            "faster": false,
+            "number": true,
+            "analytics": true,
+            "notifications": true
         },
-        "homepageConfiguration": {
-            "initialNotification": "Yoooooo, who is this handsome fella ?"
+        "landingMenuConfiguration": {
+            "welcomeNotification": "If the game feels hard, just know that it is actually not hard. You just suck ass <3"
         },
         "nodeMapConfiguration": {
             "maxMapWidth": 4,
