--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.1",
-    "@astrojs/node": "^5.1.4",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.5.7",
     "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "tailwindcss": "^3.3.1",
     "three": "^0.152.2"
   },
